--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,7 @@ body {
   margin: 0;
   padding: 0 0 70px 0;
   position: relative;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 footer {
   background-color: #544747;
@@ -75,7 +74,6 @@ a {
   margin-left: 15px;
 }
 .movings .panel-heading {
-  background: -webkit-gradient(linear, left top, left bottom, from(#feb418), to(#fc6d09));
   background: linear-gradient(#feb418, #fc6d09);
 }
 .movings .panel-body img {
@@ -97,9 +95,10 @@ a {
 #logoshow {
   background: #fcfff4;
   /* Old browsers */
+  background: -moz-linear-gradient(top, #fcfff4 0%, #e9e9ce 100%);
   /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #fcfff4 0%, #e9e9ce 100%);
   /* Chrome10-25,Safari5.1-6 */
-  background: -webkit-gradient(linear, left top, left bottom, from(#fcfff4), to(#e9e9ce));
   background: linear-gradient(to bottom, #fcfff4 0%, #e9e9ce 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcfff4', endColorstr='#e9e9ce', GradientType=0);
@@ -196,7 +195,6 @@ label {
 }
 .streep {
   background: #F8EDDB;
-  background: -webkit-gradient(linear, left top, left bottom, from(#fff8e9), to(#eddbc4));
   background: linear-gradient(#fff8e9, #eddbc4);
 }
 /*HERO Контактная форма с картинкой вверху контентной части*/
@@ -270,9 +268,10 @@ input[type="text"] {
 .gazel {
   background: #fff78b;
   /* Old browsers */
+  background: -moz-linear-gradient(top, #fff78b 0%, #ffcd7d 100%);
   /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #fff78b 0%, #ffcd7d 100%);
   /* Chrome10-25,Safari5.1-6 */
-  background: -webkit-gradient(linear, left top, left bottom, from(#fff78b), to(#ffcd7d));
   background: linear-gradient(to bottom, #fff78b 0%, #ffcd7d 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff78b', endColorstr='#ffcd7d', GradientType=0);
@@ -294,12 +293,16 @@ input[type="text"] {
   background: #f4ebcd;
   /* Old browsers */
   /* IE9 SVG, needs conditional override of 'filter' to 'none' */
+  background: -moz-linear-gradient(top, #f4ebcd 0%, #e8c59d 100%);
   /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f4ebcd), color-stop(100%, #e8c59d));
   /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #f4ebcd 0%, #e8c59d 100%);
   /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #f4ebcd 0%, #e8c59d 100%);
   /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #f4ebcd 0%, #e8c59d 100%);
   /* IE10+ */
-  background: -webkit-gradient(linear, left top, left bottom, from(#f4ebcd), to(#e8c59d));
   background: linear-gradient(to bottom, #f4ebcd 0%, #e8c59d 100%);
   /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f4ebcd', endColorstr='#e8c59d', GradientType=0);
@@ -508,9 +511,10 @@ td.tbl-no-padding img {
 .grey-streep-dashed-border {
   background: #f2f6f8;
   /* Old browsers */
+  background: -moz-linear-gradient(top, #f2f6f8 0%, #d8e1e7 50%, #b5c6d0 51%, #e0eff9 100%);
   /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #f2f6f8 0%, #d8e1e7 50%, #b5c6d0 51%, #e0eff9 100%);
   /* Chrome10-25,Safari5.1-6 */
-  background: -webkit-gradient(linear, left top, left bottom, from(#f2f6f8), color-stop(50%, #d8e1e7), color-stop(51%, #b5c6d0), to(#e0eff9));
   background: linear-gradient(to bottom, #f2f6f8 0%, #d8e1e7 50%, #b5c6d0 51%, #e0eff9 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f2f6f8', endColorstr='#e0eff9', GradientType=0);
@@ -518,142 +522,16 @@ td.tbl-no-padding img {
   border: silver 1px dashed;
   padding: 5px 0;
 }
-/*Калькуляторы*/
-#modal_kalk {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#fffef7+0,fff7b7+100 */
-  background: #fffef7;
-  /* Old browsers */
-  /* FF3.6-15 */
-  /* Chrome10-25,Safari5.1-6 */
-  background: -webkit-gradient(linear, left top, left bottom, from(#fffef7), to(#fff7b7));
-  background: linear-gradient(to bottom, #fffef7 0%, #fff7b7 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffef7', endColorstr='#fff7b7', GradientType=0);
-  /* IE6-9 */
-  font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, sans-serif;
-  width: 370px;
-  padding: 15px;
-  border-radius: 5px;
-  -o-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-top: 1px solid yellow;
-  border-left: 1px solid yellow;
-  border-bottom: 1px solid gold;
-  border-right: 1px solid gold;
-  display: none;
-  position: absolute;
-  top: 220px;
-  left: 50%;
-  margin-top: -175px;
-  margin-left: -185px;
-  overflow: hidden;
-  z-index: 10;
-}
-.kalk-zagolovok {
-  font-size: 22px;
-}
-#modal_kalk table td {
-  padding: 3px;
-}
-#modal_kalk fieldset {
-  padding: 10px;
-}
-#modal_kalk input[type="text"] {
-  float: right;
-  width: 220px;
-}
-#modal_kalk fieldset {
-  display: block;
-  clear: both;
-}
-#modal_kalk legend {
-  font-weight: bold;
-}
-#modal_kalk select {
-  float: right;
-  width: 140px;
-}
-#itog {
-  font-size: 22px;
-  font-weight: bold;
-  display: block;
-}
-#submit_button {
-  float: left;
-  padding: 4px;
-  width: 150px;
-}
-#close_button {
-  float: right;
-  padding: 4px;
-  width: 150px;
-}
-/* Конец Калькуляторы*/
-#underlay {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  background-color: black;
-  left: 0;
-  top: 0;
-  opacity: 0.5;
-  z-index: 9;
-  display: none;
-}
-#modal-close {
-  position: absolute;
-  width: 400px;
-  height: 150px;
-  left: 50%;
-  top: 220px;
-  margin-left: -200px;
-  margin-top: -75px;
-  background-color: white;
-  z-index: 10;
-  border-top-color: #82aee0;
-  border-top-style: solid;
-  border-top-width: 1px;
-  border-left-color: #C5DBF2;
-  border-left-style: solid;
-  border-left-width: 1px;
-  border-bottom-color: gray;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-right-color: gray;
-  border-right-style: solid;
-  border-right-width: 1px;
-  display: none;
-}
-#top {
-  background-color: darkorange;
-  height: 30px;
-  position: relative;
-}
-#content-modal {
-  padding: 5px;
-  position: relative;
-}
-#content-modal p {
-  margin: 10px;
-  text-align: center;
-  line-height: 24px;
-}
-#content-modal input {
-  display: block;
-  margin: 0 150px 0 150px;
-  width: 100px;
-  padding: 3px 10px 3px 10px;
-}
 /*Новое модальное окно - вызов оценщика*/
 .modal_home {
   width: 400px;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#fffef7+0,fff7b7+100 */
   background: #fffef7;
   /* Old browsers */
+  background: -moz-linear-gradient(top, #fffef7 0%, #fff7b7 100%);
   /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #fffef7 0%, #fff7b7 100%);
   /* Chrome10-25,Safari5.1-6 		*/
-  background: -webkit-gradient(linear, left top, left bottom, from(#fffef7), to(#fff7b7));
   background: linear-gradient(to bottom, #fffef7 0%, #fff7b7 100%);
   /* W3C, IE10+, FF16+, 		Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffef7', endColorstr='#fff7b7', GradientType=0);
@@ -718,10 +596,6 @@ td.tbl-no-padding img {
 }
 .modal_home label {
   font-weight: bold;
-}
-#date-ocenka {
-  width: 150px;
-  margin-left: 20px;
 }
 /*Конец нового модального окна - вызов оценщика*/
 /*Дачный переезд*/
@@ -796,4 +670,115 @@ td.tbl-no-padding img {
 }
 .uslugi {
   padding: 7px 0;
+}
+#phone-error,
+#email-error,
+#name-error,
+#txtMessage-error {
+  background: linear-gradient(#555555, #777777);
+  color: white;
+  padding: 5px;
+  font-weight: normal;
+  border-radius: 5px;
+  margin: 0 15px;
+  position: relative;
+  top: -6px;
+  white-space: nowrap;
+}
+#phone-error:after,
+#email-error:after,
+#name-error:after,
+#txtMessage-error:after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 10px solid #777;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+.form-group {
+  margin-bottom: 10px;
+}
+.modal-header {
+  background-color: #F76B0C;
+  background: linear-gradient(#ffb056, #f76b0c);
+  border-radius: 5px 5px 0 0;
+}
+.modal-footer {
+  background-color: #F8EDDB;
+  border-radius: 0 0 5px 5px;
+}
+.modal-body b {
+  color: #C9302C;
+}
+#phone-error,
+#email-error,
+#name-error,
+#txtMessage-error {
+  background: linear-gradient(#555555, #777777);
+  color: white;
+  padding: 5px;
+  font-weight: normal;
+  border-radius: 5px;
+  margin: 0 15px;
+  position: relative;
+  top: -6px;
+  white-space: nowrap;
+}
+#phone-error:after,
+#email-error:after,
+#name-error:after,
+#txtMessage-error:after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 10px solid #777;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+.form-group {
+  margin-bottom: 10px;
+}
+.modal-header {
+  background-color: #F76B0C;
+  background: linear-gradient(#ffb056, #f76b0c);
+  border-radius: 5px 5px 0 0;
+}
+.modal-footer {
+  background-color: #F8EDDB;
+  border-radius: 0 0 5px 5px;
+}
+.modal-body b {
+  color: #C9302C;
+}
+.modal-title {
+  color: #fff;
+  font-weight: bold;
+  font-size: 18px;
+}
+#modal-double .modal-content {
+  max-width: 450px;
+}
+#modalclose .modal-dialog {
+  height: 150px;
+}
+.red-lg {
+  font-weight: bold;
+  color: brown;
+  font-size: 18px;
+}
+#modal_kalk .modal-content {
+  max-width: 450px;
 }
