--- a/less/styles.less
+++ b/less/styles.less
@@ -541,137 +541,7 @@ border: silver 1px dashed;
 padding: 5px 0;
 }
 
-/*Калькуляторы*/
 
-#modal_kalk{
-       /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#fffef7+0,fff7b7+100 */
-background: rgb(255,254,247); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(255,254,247,1) 0%, rgba(255,247,183,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(255,254,247,1) 0%,rgba(255,247,183,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(255,254,247,1) 0%,rgba(255,247,183,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fffef7', endColorstr='#fff7b7',GradientType=0 ); /* IE6-9 */
-font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, sans-serif;
-        
-        width:370px;
-        padding:15px;
-        border-radius:5px;
-        -o-border-radius:5px;
-        -webkit-border-radius:5px;
-        -moz-border-radius:5px;
-        border-top:1px solid yellow;
-        border-left:1px solid yellow;
-        border-bottom:1px solid gold;
-        border-right:1px solid gold;
-        display:none; 
-        position:absolute;
-		top:220px;
-		left:50%;
-        margin-top:-175px;
-        margin-left:-185px;
-		overflow:hidden;
-		z-index:10;
-    }
-    .kalk-zagolovok{
-        font-size:22px;
-    }
-    #modal_kalk table{
-        
-    }
-    #modal_kalk table td{
-        padding:3px;
-    }
-    #modal_kalk fieldset{
-        padding:10px;
-    }
-    #modal_kalk input[type="text"]{
-        float:right;
-        width:220px;
-    }
-    #modal_kalk fieldset{
-        display:block;
-        clear:both;
-    }
-    #modal_kalk legend{
-        font-weight:bold;
-    }
-    #modal_kalk select{
-        float:right;
-        width:140px;
-    }
-    #itog{
-        font-size:22px;
-        font-weight:bold;
-        display:block;
-         
-    }
-    #submit_button{
-        float:left;
-		padding:4px;
-		width:150px;
-    }
-    #close_button{
-        float:right;
-		padding:4px;
-		width:150px;
-    }
-/* Конец Калькуляторы*/
-// Модальное финал
-
-#underlay{
-	width:100%;
-	height:100%;
-	position:fixed;
-	background-color:black;
-	left:0;
-	top:0;
-	opacity:0.5;
-	z-index:9;
-	display:none;
-}
-#modal-close{
-  position:absolute;
-  width:400px;
-  height:150px;
-  left:50%;
-  top:220px;
-  margin-left:-200px;
-  margin-top:-75px;
-  background-color: white;
-  z-index: 10;
-  border-top-color:#82aee0;
-  border-top-style: solid;
-  border-top-width: 1px;
-  border-left-color:#C5DBF2;
-  border-left-style: solid;
-  border-left-width: 1px;
-  border-bottom-color:gray;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-right-color:gray;
-  border-right-style: solid;
-  border-right-width: 1px;
-  display: none;
-}
-#top{
-  background-color:darkorange;
-  height: 30px;
-  position: relative;
-}
-#content-modal{
-padding:5px;
-position: relative;
-}
-#content-modal p{
-margin:10px;
-text-align:center;
-line-height: 24px;
-}
-#content-modal input{
-display:block;
-margin:0 150px 0 150px;
-width: 100px;
-padding:3px 10px 3px 10px;
-}
 
 /////////////////////////////////
 /*Новое модальное окно - вызов оценщика*/
@@ -747,10 +617,6 @@ padding:3px 10px 3px 10px;
 }
 .modal_home label{
         font-weight:bold;
-}
-#date-ocenka{
-  width:150px;
-  margin-left:20px;
 }
 /*Конец нового модального окна - вызов оценщика*/
 ////////////////////////////
@@ -830,3 +696,106 @@ padding:3px 10px 3px 10px;
 .uslugi{
 	padding: 7px 0;
 }
+////////////////////////////////////////////
+#phone-error,  #email-error, #name-error, #txtMessage-error{
+    background: linear-gradient(#555,#777);
+    color: white;
+    padding: 5px;
+    font-weight: normal;
+    border-radius:5px;
+    margin: 0 15px;
+    position: relative;
+    top: -6px;
+    white-space: nowrap;
+  }
+  #phone-error:after, #email-error:after, #name-error:after, #txtMessage-error:after{
+    content: '';
+    display: block;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 10px solid #777;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .form-group{
+    margin-bottom: 10px;
+  }
+  .modal-header{
+    background-color: #F76B0C;
+    background: linear-gradient(#FFB056, #F76B0C);
+    border-radius: 5px 5px 0 0;
+  }
+ .modal-footer{
+    background-color: #F8EDDB;
+    border-radius: 0 0 5px 5px;
+  }
+  .modal-body b{
+    color: #C9302C;
+  }#phone-error,  #email-error, #name-error, #txtMessage-error{
+    background: linear-gradient(#555,#777);
+    color: white;
+    padding: 5px;
+    font-weight: normal;
+    border-radius:5px;
+    margin: 0 15px;
+    position: relative;
+    top: -6px;
+    white-space: nowrap;
+  }
+  #phone-error:after, #email-error:after, #name-error:after, #txtMessage-error:after{
+    content: '';
+    display: block;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 10px solid #777;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .form-group{
+    margin-bottom: 10px;
+  }
+  .modal-header{
+    background-color: #F76B0C;
+    background: linear-gradient(#FFB056, #F76B0C);
+    border-radius: 5px 5px 0 0;
+  }
+ .modal-footer{
+    background-color: #F8EDDB;
+    border-radius: 0 0 5px 5px;
+  }
+  .modal-body b{
+    color: #C9302C;
+  }
+  .modal-title{
+  	color: #fff;
+  	font-weight: bold;
+  	font-size: 18px;
+  }
+  
+  ////////////////////
+  #modal-double .modal-content{
+  	max-width: 450px;
+  }
+  #modalclose .modal-dialog{
+    height: 150px;
+  }
+.red-lg{
+	font-weight: bold;
+	color: brown;
+	font-size: 18px;
+}
+////////////////////////
+///Калькулятор
+#modal_kalk .modal-content{
+  	max-width: 450px;
+  }
