--- a/less/styles.less
+++ b/less/styles.less
@@ -288,6 +288,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff78b', end
     display:block;
     text-align:center; 
     font-size: 16px;
+    padding: 5px;
 }
 
 .gazel+p{
@@ -295,9 +296,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff78b', end
 	background: transparent;
 	font-size: 14px;
 	text-align: left;
+	padding: 0 10px;
 }
 .economy{
 	font-size: 18px;
+	color: brown;
 }
 .pecati{
 background: rgb(244,235,205); /* Old browsers */
