--- a/css/styles.css
+++ b/css/styles.css
@@ -784,3 +784,24 @@ td.tbl-no-padding img {
 #modal_kalk .modal-content {
   max-width: 450px;
 }
+ .shagi{
+      margin: 10px 0;
+    }
+    .shagi li:before {
+      color: orange;
+      font-family: 'Glyphicons Halflings';
+      content: "\e095";
+      float: left;
+      font-size: 18px;
+      display: block;
+      width: 30px;
+      height: 30px;
+      margin: 10px;
+      line-height: 30px;
+      text-align: center;
+      border-radius: 40%;
+      background: radial-gradient(#fff, #ddd);
+      box-shadow: 0 1px 2px rgba(0,0,0, .3), inset -1px -1px 2px #fff;
+      text-shadow:  0 0 1px brown, -1px -1px 1px brown;
+
+    }
